examples/test/testpolicy4707.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4707
  namespace: namespace268
spec:
  podSelector:
    matchLabels:
      key17: value31
      key39: value31
      key36: value21
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key32: value9
          key8: value31
          key28: value14
      podSelector:
        matchLabels:
          key11: value1
